--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,115 +1,89 @@
 
 /* import fonts */
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
 
-body {
+/* body {
     font-family: 'Roboto', sans-serif;
-    color: #555;
+    /* color: #555; */
     
-}
-
-* {
-    margin: 0;
-    padding: 0
-}
-
-
-
+/* } */
 
 nav {
-    /* background-color: rgb(45, 25, 45); */
-    height: 80px;
     width: 100%;
-    /* color: #fff; */
-    padding: 0;
-    text-decoration: none;
-}
-
-nav a {
+    color: #fff;
     text-decoration: none;
 }
 
 nav ul {
-    float: right;
-    margin-right: 2px;
+    display: flex;
+    justify-content: end;
+    width: 50%;
+    margin-right: 0;
+    align-items: right;
+}
+
+nav a {
+    text-decoration: none;
+    /* border: none; */
+}
+
+nav ul li p {
+    display: inline;
 }
 
 nav ul li {
-    display: inline-block;
-    line-height: 20px;
-    margin: 0 5px;
+    display: inline-block;    
 }
 
 nav ul li a {
-    /* color: #fff; */
     line-height: 80px;
-    margin: 13px;
-    font-size: 17px;
+    margin: 6px;
+    font-size: 20px;
     text-decoration: none;   
-    padding: 15px;
-    /* text-transform: uppercase; */
+    padding: 8px;
+    color: white !important;
+}
+    
+nav ul li svg {
+    display: inline;
+    margin-right: 6px;
 }
 
 
 
-.logo {
-    /* color: white; */
-    font-size: 35px;
-    text-decoration: none;
-    line-height: 80px;
-    padding: 0 20px;
-    font-weight: bold;
+.logo-text {
+    margin-left: 30px;
+    background-color: red;
+    background-image: linear-gradient(45deg, orange, yellow);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
 }
 
-
-.navbar-mainbg li a{
-    background-color: rgb(45, 25, 45);
-    color: rgba(250, 250, 250, 0.8);
-    border-bottom: transparent solid 1px;
-    padding: 5px 10px;
-    margin: 2px 5px;
-}
-
-i {
-    padding-right: 5px;
-}
+.logo-art {
+    width: 220px;
+    height: 3px;
+    background-color: rgba(160, 241, 237, 0.957);
+    position: absolute;
+    left: 40px;
+    top: 60px;
+    z-index: 200;
+    transform: skewX(-45deg) rotate(-1deg);
+  }
 
 
 
-a.nav-link.active {
-    color: black;
-    /* border: rgba(250, 250, 250, 0.8) solid 2px; */
-    background-color: rgb(250, 250, 250, 0.7) ;
-    transition: background-color 1.2s;
-    transition: border 0.1s;
-    border-radius: 12px;
-}
 
 
-
+/* Navigation Border */
 .nav-border {
     border-bottom: 2px solid rgb(194, 188, 188, 0.6);
-    
 }
-
-a.active,
-a:hover {
-    background-color: #ddd;
-    transition: 0.5s;
-}
-
-a.active {
-    border-radius: 5px;
-}
-
 
 
 .checkbtn {
-    font-size: 30px;
-    color: black;
-    float:right;
-    line-height: 80px;
-    margin-right: 40px;
     cursor: pointer;
     display: none;
 }
@@ -117,44 +91,97 @@ a.active {
 #checkbx {
     display: none;
 }
-
-@media (max-width: 952px) {
-    label.logo {
-        font-size: 30px;
-        padding-left: 50px;
-    }
+.nav-link {
+    display: inline-block;
+    color: white;
+    transition: 0.5s;
+    
 }
+
+
+
+
+@media (max-width: 600px) {
+    
+    nav ul li a {
+        font-size: 10px;
+        color: white;
+        margin: 2px;
+        padding: 2px;
+    }
+    
+    
+
+    nav ul {
+        width: 250px;
+    }
+
+    .logo-text {
+        margin-left: 10px;
+        font-size: 20px;
+    }
+    .logo-art {
+        width: 100px;
+        left: 5px;
+        top: 65px;
+    }
+    nav ul li svg {
+        font-size: 12px;
+        color: white;
+        margin: 1px;
+        padding: 1px;
+    }
+
+}
+
 
 @media (max-width: 858px) {
     .checkbtn {
         display: block;
     }
 
-    ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background-color: #2c3e50;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
+    .logo-text {
+        padding: 10px 3px;
+        width: 600px;
     }
 
-    nav ul li {
-        display: block;
+    .logo-art {
+        top: 50px;
+        left: 20px;
+        width: 130px;
     }
-
-    nav ul li a {
-        font-size: 20px;
+    nav ul li p {
+        display: none;
         color: white;
     }
+
     
-    a:hover, a.active {
-        background: none;
-        color: #0082e6;
+
+    ul {
+        width: 100%;
+        /* height: 100vh; */
+        /* background-color: #2c3e50; */
+        text-align: center;
+        transition: all .5s;
+        padding: 0;
+        margin: 0;
     }
 
+
+    nav ul li a {
+        font-size: 15px;
+        color: white;
+        margin: 4px;
+        padding: 4px;
+    }
+    
+    nav ul li svg {
+        font-size: 30px;
+    }
+
+    nav ul {
+        width: 300px;
+    }
     #checkbx:checked ~ ul {
         left: 0px;
     }
