--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,120 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root {
+  background: radial-gradient(#2d2929, rgb(72, 69, 69));
+  min-height: 1000px;
 }
+
+
+@font-face {
+  font-family: "PoorStory";
+  src: local("PoorStory"), url("./fonts/PoorStory/PoorStory-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "PermanentMarker";
+  src: local("PermanentMarker"), url("./fonts/Permanent_Marker/PermanentMarker-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "FingerPaint";
+  src: local("FingerPaint"), url("./fonts/Finger_Paint/FingerPaint-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "PermanentMarker";
+  src: local("PermanentMarker"), url("./fonts/Permanent_Marker/PermanentMarker-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Flamenco";
+  src: local("Flamenco"), url("./fonts/Flamenco/Flamenco-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Atma-Medium";
+  src: local("Atma-Medium"), url("./fonts/Atma/Atma-Light.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Roboto-Regular";
+  src: local("Roboto-Regular"), url("./fonts/Roboto/Roboto-Regular.ttf") format("truetype");
+}
+
+
+ul li {
+  text-align: left;
+  padding-left: 12px;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@layer base {
+  ul {
+    @apply list-disc;
+  }
+  /* h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  } */
+  /* ... */
+}
+
+@layer components {
+  .container {
+    /* @apply rounded-b-lg shadow-md; */
+    @apply bg-gradient-to-br from-stone-800 to-stone-600 py-6 px-4 text-white border-x  border-gray-300 min-h-[1000px];
+  }
+}
+
+a {
+  color: rgb(72, 197, 208) !important;
+  text-decoration: none !important;
+}
+
+/* Navigation Links */
+nav > a {
+  font-family: "PermanentMarker";
+  color: white;
+  background: none;
+}
+
+
+li a.active {
+  background: none;
+  border-radius: 50px;
+}
+
+
+
+h3 {
+  font-family: "PoorStory";
+}
+
+h4 {
+  font-family: "Flamenco";
+}
+
+h2 {
+  font-family: "FingerPaint";
+}
+
+p, li {
+  font-family: "Roboto-Regular";
+  font-size: large;
+}
+
+
+a.active,
+a:hover {
+    /* background-color: #ddd; */
+    transition: all 0.5s;
+}
+
+a.active {
+    border-radius: 5px;
 }
