--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,7 +16,7 @@ nav {
 
 nav ul {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     width: 50%;
     margin-right: 0;
     align-items: right;
