--- a/src/components/MovingNotes/MovingNotes.css
+++ b/src/components/MovingNotes/MovingNotes.css
@@ -28,6 +28,7 @@ div.gallery {
     /* box-shadow: 2px 4px 12px rgba(246, 237, 237, 0.2); */
     /* border: 2px solid rgb(77, 74, 74); */
     border-radius: 11px;
+    width: 100%;
   }
 
 .city-container {
