--- a/src/components/MovingNotes/MovingNotes.css
+++ b/src/components/MovingNotes/MovingNotes.css
@@ -2,7 +2,7 @@ div.gallery {
     margin: 5px;
     border: 1px solid #ccc;
     /* float: left; */
-    width: 180px;
+    width: 90%;
   }
   
   div.gallery:hover {
@@ -47,7 +47,10 @@ div.gallery {
     width: 31%;
   }
 
-  @media (max-width: 858px) {
+  @media (max-width: 640px) {
+  }
+
+  @media (min-width: 640px and max-width: 1007px) {
     .city-card {
       width: 100%;
     }
