--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,7 +17,7 @@ nav {
 nav ul {
     display: flex;
     justify-content: flex-end;
-    width: 50%;
+    width: 100%;
     margin-right: 0;
     align-items: right;
 }
@@ -32,26 +32,29 @@ nav ul li p {
 }
 
 nav ul li {
-    display: inline-block;    
+    display: inline-block;  
+    margin: 0 20px;
+    padding: 0;  
 }
 
 nav ul li a {
     line-height: 80px;
-    margin: 6px;
+    margin: 4px;
     font-size: 20px;
     text-decoration: none;   
-    padding: 8px;
+    padding: 0;
     color: white !important;
 }
     
 nav ul li svg {
     display: inline;
-    margin-right: 6px;
+    margin-right: 8px;
 }
 
 
 
 .logo-text {
+    width: 300px;
     margin-left: 30px;
     background-color: red;
     background-image: linear-gradient(45deg, orange, yellow);
@@ -96,46 +99,58 @@ nav ul li svg {
     color: white;
     transition: 0.5s;
     
+    
 }
 
 
 
 
-@media (max-width: 600px) {
+@media screen and (max-width: 640px) {
     
     nav ul li a {
-        font-size: 10px;
+        font-size: 20px;
         color: white;
         margin: 2px;
         padding: 2px;
     }
     
-    
-
     nav ul {
         width: 250px;
     }
 
+    
     .logo-text {
-        margin-left: 10px;
-        font-size: 20px;
+        margin-top: 25px;
+        margin-left: 5px;
+        font-size: 22px;
+        line-height: 30px;
     }
+    
     .logo-art {
-        width: 100px;
-        left: 5px;
-        top: 65px;
+        top: 54px;
+        left: 20px;
+        width: 130px;
     }
+    
+    nav ul li {
+        margin: 7px;
+    }
+
     nav ul li svg {
-        font-size: 12px;
+        font-size: 30px;
         color: white;
-        margin: 1px;
-        padding: 1px;
+        margin: 0;
+        padding: 0;
+    }
+
+    nav ul li p {
+        display: none;
     }
 
 }
 
 
-@media (max-width: 858px) {
+@media (min-width: 641px and max-width: 1007px) {
     .checkbtn {
         display: block;
     }
@@ -146,27 +161,19 @@ nav ul li svg {
     }
 
     .logo-art {
-        top: 50px;
-        left: 20px;
-        width: 130px;
+        top: 70px;
+        left: 55px;
+        width: 220px;
     }
+    
+    nav ul li {
+        display: none;
+    }
+    
     nav ul li p {
         display: none;
         color: white;
     }
-
-    
-
-    ul {
-        width: 100%;
-        /* height: 100vh; */
-        /* background-color: #2c3e50; */
-        text-align: center;
-        transition: all .5s;
-        padding: 0;
-        margin: 0;
-    }
-
 
     nav ul li a {
         font-size: 15px;
