--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,6 +17,8 @@ nav {
 nav ul {
     display: flex;
     justify-content: flex-end;
+    list-style-type: none;
+    /* overflow: hidden; */
     width: 100%;
     margin-right: 0;
     align-items: right;
@@ -24,6 +26,7 @@ nav ul {
 
 nav a {
     text-decoration: none;
+    
     /* border: none; */
 }
 
@@ -32,7 +35,6 @@ nav ul li p {
 }
 
 nav ul li {
-    display: inline-block;  
     margin: 0 20px;
     padding: 0;  
 }
@@ -54,7 +56,7 @@ nav ul li svg {
 
 
 .logo-text {
-    width: 300px;
+    width: 100%;
     margin-left: 30px;
     background-color: red;
     background-image: linear-gradient(45deg, orange, yellow);
@@ -103,23 +105,57 @@ nav ul li svg {
 }
 
 
-
-
-@media screen and (max-width: 640px) {
-    
-    nav ul li a {
-        font-size: 20px;
-        color: white;
-        margin: 2px;
-        padding: 2px;
-    }
-    
-    nav ul {
-        width: 250px;
-    }
-
+@media screen and (max-width: 375px) {
     
     .logo-text {
+        width: 40%;
+        margin-top: 30px;
+        margin-left: 3px;
+        font-size: 20px;
+        line-height: 22px;
+    }
+
+     
+    .logo-art {
+        top: 54px;
+        left: 15px;
+        width: 120px;
+    }
+
+    nav ul {
+        width: 20%;
+        
+    }
+
+    nav ul li {
+        margin: 3px;
+    }
+
+    nav ul li svg {
+        font-size: 30px;
+        color: white;
+        margin: 0;
+        padding: 0;
+    }
+
+    nav ul li p {
+        display: none;
+    }
+}
+
+
+@media screen and (min-width: 376px) and (max-width: 640px) {
+    
+    nav a {
+        width: 100%;
+    }
+
+    nav ul {
+        width: 50%;
+    }
+
+    .logo-text {
+        width: 40%;
         margin-top: 25px;
         margin-left: 5px;
         font-size: 22px;
@@ -133,7 +169,7 @@ nav ul li svg {
     }
     
     nav ul li {
-        margin: 7px;
+        margin: 3px;
     }
 
     nav ul li svg {
@@ -150,7 +186,35 @@ nav ul li svg {
 }
 
 
-@media (min-width: 641px and max-width: 1007px) {
+@media screen and (min-width: 641px) and (max-width:768px) {
+    .logo-art {
+        top: 55px;
+        left: 45px;
+        width: 200px;
+    }
+    
+    nav ul li p {
+        display: none;
+    }
+
+    nav ul li a {
+        font-size: 15px;
+        color: white;
+        margin: 1px;
+        padding: 1px;
+    }
+    
+    nav ul li svg {
+        font-size: 30px;
+    }
+
+    nav ul {
+        width: 300px;
+    }
+}
+
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
     .checkbtn {
         display: block;
     }
