--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,8 +12,8 @@ nav {
     width: 100%;
     color: #fff;
     text-decoration: none;
-    border-bottom: 2px solid green;
-    box-shadow: 0 5px 15px 0 lightgreen;
+    /* border-bottom: 1px solid white; */
+    box-shadow: 0 5px 15px 0 lightblue;
 }
 
 nav ul {
